# ArtistWebpage

./: Album.cpp  Album.h  AlbumImage.h  AlbumImages.h  Albums.cpp  Albums.h  Artist.cpp  Artist.h  ArtistImage.cpp  ArtistImage.h  ArtistImages.h  Artists.cpp  Artists.h  CMakeLists.txt  JSONArray.cpp  JSONArray.h  JSONDataObject.cpp  JSONDataObject.h  KeyValuePair.cpp  KeyValuePair.h  README.md  README.txt  Tokenizer.cpp  Track.cpp  Track.h  Tracks.h  art.html  main.cpp  makefile  placeholder.html
JSON/: albums_human_readable.json  artist_images_human_readable.json
src/Album/: Album.h  Albums.h
src/Album/Images/: AlbumImage.cpp  AlbumImage.h  AlbumImages.cpp  AlbumImages.h
src/Artist/: Artist.h  Artists.cpp  Artists.h
src/Artist/Images/: ArtistImage.h  ArtistImages.cpp  ArtistImages.h
src/JSON/: JSONArray.cpp  JSONDataObject.cpp  JSONDataObject.h
src/Tokenizer/: Token.cpp  Token.h  Tokenizer.h
src/Tokenizer/Data/: KeyValuePair.h
src/Tracks/: Track.cpp  Track.h  Tracks.cpp  Tracks.h
